add frontent and polish the backend